--- a/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-mysql/src/main/resources/application.yml
+++ b/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-mysql/src/main/resources/application.yml
@@ -4,19 +4,20 @@ spring:
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
-canal:
-  mysql:
-    configuration:
-      instance: canalMysqlExample
-      filter: canal_client_example.t_user
-      show-entry-log: true
-      show-event-log: true
-    enabled: true
-    consumer-config-map:
-      canal_client_example:
-        t_user:
-          column-map:
-            version: version1
-          default-values:
-            deleted: 0
-          exclude-columns: status,test
+fxk:
+  canal:
+    mysql:
+      configuration:
+        instance: canalMysqlExample
+        filter: canal_client_example.t_user
+        show-entry-log: true
+        show-event-log: true
+      enabled: true
+      consumer-config-map:
+        canal_client_example:
+          t_user:
+            column-map:
+              version: version1
+            default-values:
+              deleted: 0
+            exclude-columns: status,test
