--- a/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-rabbitmq/src/main/resources/application.yml
+++ b/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-rabbitmq/src/main/resources/application.yml
@@ -1,11 +1,12 @@
-canal:
-  mq:
-    configuration:
-      instance: canalMqExample
-      filter: canal_client_example.t_user
-      show-entry-log: true
-      show-event-log: true
-      enable-logic-delete: true
-      logic-delete-field: deleted
-      batch-size: 10000
-    enabled: true
+fxk:
+  canal:
+    mq:
+      configuration:
+        instance: canalMqExample
+        filter: canal_client_example.t_user
+        show-entry-log: true
+        show-event-log: true
+        enable-logic-delete: true
+        logic-delete-field: deleted
+        batch-size: 10000
+      enabled: true
