--- a/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-kafka/src/main/resources/application.yml
+++ b/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-kafka/src/main/resources/application.yml
@@ -1,8 +1,9 @@
-canal:
-  mq:
-    enabled: true
-    configuration:
-      instance: canalMqExample
-      filter: canal_client_example.t_user
-      show-entry-log: true
-      show-event-log: true
+fxk:
+  canal:
+    mq:
+      enabled: true
+      configuration:
+        instance: canalMqExample
+        filter: canal_client_example.t_user
+        show-entry-log: true
+        show-event-log: true
