--- a/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-rocketmq/src/main/resources/application.yml
+++ b/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-rocketmq/src/main/resources/application.yml
@@ -1,11 +1,12 @@
-canal:
-  mq:
-    configuration:
-      instance: canalMqExample
-      filter: canal_client_example.t_user
-      show-entry-log: true
-      show-event-log: true
-    enabled: true
+fxk:
+  canal:
+    mq:
+      configuration:
+        instance: canalMqExample
+        filter: canal_client_example.t_user
+        show-entry-log: true
+        show-event-log: true
+      enabled: true
 rocketmq:
   name-server: 192.168.173.172:9876
   producer:
