--- a/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-xxlmq/src/main/resources/application.yml
+++ b/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-xxlmq/src/main/resources/application.yml
@@ -1,12 +1,13 @@
-canal:
-  mq:
-    configuration:
-      instance: canalMqExample
-      filter: canal_client_example.t_user
-      show-entry-log: true
-      show-event-log: true
-    enabled: true
-xxl:
-  mq:
-    admin:
-      address: http://localhost:9501/xxl-mq-admin
+fxk:
+  canal:
+    mq:
+      configuration:
+        instance: canalMqExample
+        filter: canal_client_example.t_user
+        show-entry-log: true
+        show-event-log: true
+      enabled: true
+  xxl:
+    mq:
+      admin:
+        address: http://localhost:9501/xxl-mq-admin
