--- a/fxk-boot-example/fxk-boot-starter-log-example/src/main/resources/application.yml
+++ b/fxk-boot-example/fxk-boot-starter-log-example/src/main/resources/application.yml
@@ -4,11 +4,12 @@ spring:
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
-log:
-  # 存储方式
-  store-type: jdbc
-  jdbc-store:
-    # 数据库表名
-    table-name: sys_log
+fxk:
+  log:
+    # 存储方式
+    store-type: jdbc
+    jdbc-store:
+      # 数据库表名
+      table-name: sys_log
 server:
   port: 80
