add starter web

--- a/fxk-boot-dependencies/pom.xml
+++ b/fxk-boot-dependencies/pom.xml
@@ -340,6 +340,11 @@
                 <artifactId>fxk-boot-starter-log</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.fanxuankai.boot</groupId>
+                <artifactId>fxk-boot-starter-web</artifactId>
+                <version>${project.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
