--- a/fxk-boot-starter-web/pom.xml
+++ b/fxk-boot-starter-web/pom.xml
@@ -28,5 +28,10 @@
             <groupId>com.fanxuankai</groupId>
             <artifactId>commons</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 </project>
