--- a/fxk-boot-dependencies/pom.xml
+++ b/fxk-boot-dependencies/pom.xml
@@ -322,12 +322,12 @@
             </dependency>
             <dependency>
                 <groupId>com.fanxuankai.boot</groupId>
-                <artifactId>fxk-boot-starter-authorization-server</artifactId>
+                <artifactId>fxk-boot-starter-authorization</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fanxuankai.boot</groupId>
-                <artifactId>fxk-boot-starter-resource-server</artifactId>
+                "<artifactId>fxk-boot-starter-resource</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
