--- a/fxk-boot-example/fxk-boot-starter-resource-example/src/main/resources/application.yml
+++ b/fxk-boot-example/fxk-boot-starter-resource-example/src/main/resources/application.yml
@@ -1,6 +1,3 @@
-spring:
-  application:
-    name: order
 server:
   port: 8081
 logging:
@@ -17,3 +14,8 @@ security:
         key-alias: mytest
         key-password: mypass
         key-store-password: mypass
+fxk:
+  oauth2:
+    token-store-type: redis
+    resource:
+      id: order
