--- a/fxk-boot-security-oauth2/fxk-boot-starter-authorization/pom.xml
+++ b/fxk-boot-security-oauth2/fxk-boot-starter-authorization/pom.xml
@@ -13,22 +13,8 @@
     <description>FXK Boot Starter Authorization</description>
     <dependencies>
         <dependency>
-            <groupId>org.springframework.security.oauth.boot</groupId>
-            <artifactId>spring-security-oauth2-autoconfigure</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-autoconfigure-processor</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
+            <groupId>com.fanxuankai.boot</groupId>
+            <artifactId>fxk-boot-oauth2-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
@@ -36,8 +22,12 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>com.fanxuankai</groupId>
-            <artifactId>commons</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
         </dependency>
     </dependencies>
 </project>
