--- a/fxk-boot-starter-redis/pom.xml
+++ b/fxk-boot-starter-redis/pom.xml
@@ -20,5 +20,9 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
     </dependencies>
 </project>
