--- a/fxk-boot-dependencies/pom.xml
+++ b/fxk-boot-dependencies/pom.xml
@@ -44,7 +44,7 @@
         <mybatis-plus.version>3.3.1</mybatis-plus.version>
         <runlion-xxl-mq.version>1.3.0-SNAPSHOT</runlion-xxl-mq.version>
         <alibaba-dingtalk-service-sdk.version>1.0.1</alibaba-dingtalk-service-sdk.version>
-        <redisson-spring-boot.version>3.12.4</redisson-spring-boot.version>
+        <redisson.version>3.12.4</redisson.version>
         <jmockdata.version>4.2.0</jmockdata.version>
         <javassist.version>3.27.0-GA</javassist.version>
         <xxl-mq-client.version>1.2.2</xxl-mq-client.version>
@@ -103,7 +103,12 @@
             <dependency>
                 <groupId>org.redisson</groupId>
                 <artifactId>redisson-spring-boot-starter</artifactId>
-                <version>${redisson-spring-boot.version}</version>
+                <version>${redisson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson</artifactId>
+                <version>${redisson.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.github.jsonzou</groupId>
