--- a/fxk-boot-example/fxk-boot-starter-generator-example/src/main/resources/application.yml
+++ b/fxk-boot-example/fxk-boot-starter-generator-example/src/main/resources/application.yml
@@ -14,7 +14,7 @@ fxk:
     # 需要生成的表
     tables: t_user
     # 作者
-    author: fanxuankai
+    author: admin
     # 去表前缀
     prefix: t_
     # 项目绝对路径
@@ -27,18 +27,5 @@ fxk:
     service-name: user-service
     # 包名
     package-name: com.fanxuankai.boot.generator
-    # 是否覆盖
-    cover: true
-    # 自动填值 { 列名: INSERT|UPDATE|INSERT_UPDATE }
-    auto-fill:
-      create_user_id: INSERT
-      create_date: INSERT
-      modified_user_id: UPDATE
-      last_modified_date: UPDATE
-      deleted: INSERT
-    # dto 不显示的字段
-    form-exclude-columns: create_user_id,create_date,modified_user_id,last_modified_date,deleted
-    # vo 不显示的字段
-    list-exclude-columns: deleted
-    # 父类字段
-    inherited-columns: id,create_user_id,create_date,modified_user_id,last_modified_date,deleted
+    # 要生成的类文件
+    files-to-create:
