--- a/fxk-boot-example/pom.xml
+++ b/fxk-boot-example/pom.xml
@@ -26,11 +26,20 @@
         <module>fxk-boot-starter-distributed-lock-example</module>
         <module>fxk-boot-starter-log-example</module>
         <module>fxk-boot-starter-web-example</module>
+        <module>fxk-boot-starter-redis-example</module>
     </modules>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.jsonzou</groupId>
+            <artifactId>jmockdata</artifactId>
         </dependency>
     </dependencies>
 </project>
