--- a/fxk-boot-starter-web/pom.xml
+++ b/fxk-boot-starter-web/pom.xml
@@ -30,7 +30,7 @@
         </dependency>
         <dependency>
             <groupId>org.redisson</groupId>
-            <artifactId>redisson-spring-boot-starter</artifactId>
+            <artifactId>redisson</artifactId>
             <optional>true</optional>
         </dependency>
     </dependencies>
