--- a/fxk-boot-example/fxk-boot-starter-authorization-example/pom.xml
+++ b/fxk-boot-example/fxk-boot-starter-authorization-example/pom.xml
@@ -21,4 +21,12 @@
             <artifactId>fxk-boot-starter-redis</artifactId>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
