--- a/fxk-boot-example/fxk-boot-starter-web-example/pom.xml
+++ b/fxk-boot-example/fxk-boot-starter-web-example/pom.xml
@@ -15,8 +15,8 @@
             <artifactId>fxk-boot-starter-web</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.fanxuankai.boot</groupId>
-            <artifactId>fxk-boot-starter-redis</artifactId>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
         </dependency>
     </dependencies>
 </project>
