--- a/fxk-boot-example/fxk-boot-starter-resource-example/pom.xml
+++ b/fxk-boot-example/fxk-boot-starter-resource-example/pom.xml
@@ -20,5 +20,14 @@
             <groupId>com.fanxuankai.boot</groupId>
             <artifactId>fxk-boot-starter-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <!-- 集成micrometer，将监控数据存储到prometheus -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
     </dependencies>
 </project>
