--- a/fxk-boot-example/fxk-boot-starter-authorization-example/pom.xml
+++ b/fxk-boot-example/fxk-boot-starter-authorization-example/pom.xml
@@ -20,6 +20,15 @@
             <groupId>com.fanxuankai.boot</groupId>
             <artifactId>fxk-boot-starter-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <!-- 集成micrometer，将监控数据存储到prometheus -->
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
