--- a/fxk-boot-example/fxk-boot-starter-authorization-example/src/main/resources/application.yml
+++ b/fxk-boot-example/fxk-boot-starter-authorization-example/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     url: jdbc:mysql://localhost:3306/oauth2_jwt?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: 123456
+  application:
+    name: auth-service
 logging:
   level:
     org:
@@ -23,3 +25,12 @@ security:
 fxk:
   oauth2:
     token-store-type: redis
+management:
+  endpoints:
+    web:
+      exposure:
+        # 暴露端点`/actuator/prometheus`
+        include: 'prometheus'
+  metrics:
+    tags:
+      application: ${spring.application.name}
