--- a/fxk-boot-example/fxk-boot-starter-mybatis-plus-example/pom.xml
+++ b/fxk-boot-example/fxk-boot-starter-mybatis-plus-example/pom.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.fanxuankai.boot</groupId>
         <artifactId>fxk-boot-example</artifactId>
+        <groupId>com.fanxuankai.boot</groupId>
         <version>2.2.7.2-SNAPSHOT</version>
     </parent>
-    <artifactId>fxk-boot-starter-data-tree-example</artifactId>
-    <name>FXK Boot Starter Data Tree Example</name>
-    <description>FXK Boot Starter Data Tree Example</description>
+    <artifactId>fxk-boot-starter-mybatis-plus-example</artifactId>
+    <name>FXK Boot Starter Mybatis Plus Example</name>
+    <description>FXK Boot Starter Mybatis Plus Example</description>
     <dependencies>
         <dependency>
             <groupId>com.fanxuankai.boot</groupId>
