--- a/fxk-boot-dependencies/pom.xml
+++ b/fxk-boot-dependencies/pom.xml
@@ -51,6 +51,7 @@
         <spring-security-oauth.version>2.2.7.RELEASE</spring-security-oauth.version>
         <mapstruct.version>1.3.1.Final</mapstruct.version>
         <poi.version>4.1.2</poi.version>
+        <easyexcel.version>2.2.10</easyexcel.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -177,6 +178,16 @@
                 <groupId>org.apache.poi</groupId>
                 <artifactId>poi-ooxml</artifactId>
                 <version>${poi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-ooxml-schemas</artifactId>
+                <version>${poi.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>easyexcel</artifactId>
+                <version>${easyexcel.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.fanxuankai.boot</groupId>
