--- a/fxk-boot-example/fxk-boot-starter-generator-example/pom.xml
+++ b/fxk-boot-example/fxk-boot-starter-generator-example/pom.xml
@@ -30,6 +30,10 @@
             <artifactId>fxk-boot-starter-mybatis-plus</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
         </dependency>
