--- a/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-mqbroker-kafka/src/main/resources/application.yml
+++ b/fxk-boot-canal/fxk-boot-test-canal/fxk-boot-test-canal-mqbroker-kafka/src/main/resources/application.yml
@@ -1,15 +1,31 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/canal_client_example?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost:3306/fxk-boot?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
+  kafka:
+    bootstrap-servers: 192.168.173.9:9092
+    # 消费者
+    consumer:
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: com.fanxuankai.boot.mqbroker.example.common.domain
+    # 生产者
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 fxk:
   canal:
     mq:
       enabled: true
       configuration:
         instance: canalMqExample
-        filter: canal_client_example.t_user
+        filter: fxk-boot.t_user
         show-entry-log: true
         show-event-log: true
