--- a/fxk-boot-example/fxk-boot-starter-fluent-mybatis/pom.xml
+++ b/fxk-boot-example/fxk-boot-starter-fluent-mybatis/pom.xml
@@ -16,13 +16,14 @@
         <dependency>
             <groupId>com.github.atool</groupId>
             <artifactId>fluent-mybatis</artifactId>
-            <version>1.6.8</version>
+            <version>1.8.5</version>
         </dependency>
         <!-- 引入fluent-mybatis-processor, scope设置为provider 编译需要，运行时不需要 -->
         <dependency>
             <groupId>com.github.atool</groupId>
             <artifactId>fluent-mybatis-processor</artifactId>
-            <version>1.6.8</version>
+            <scope>provided</scope>
+            <version>1.8.5</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
