--- a/fxk-boot-mqbroker/fxk-boot-mqbroker-core/pom.xml
+++ b/fxk-boot-mqbroker/fxk-boot-mqbroker-core/pom.xml
@@ -25,5 +25,9 @@
             <groupId>com.fanxuankai</groupId>
             <artifactId>commons</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
     </dependencies>
 </project>
